fix: Remove parameters from TrackedEntity exporter endpoint [DHIS2-15665] (#15109)
* fix: Remove parameters from TrackedEntity exporter endpoint [DHIS2-15665]

* Fix e2e tests